[Bug #95178462] - sticky nav padding tightened on mobile screens

--- a/app/stylus/sections/nav.styl
+++ b/app/stylus/sections/nav.styl
@@ -214,7 +214,7 @@
   *  Minimum heading sizes
   */
   @media screen and (max-width: $small-width)
-
+    padding: 15px 25px
     h1
       font-size: 22px
       line-height:40px
